--- a/wiki/Dumps.wiki
+++ b/wiki/Dumps.wiki
@@ -6,3 +6,4 @@ On this page, pre-made and ready to use database dumps for DSwiki are available 
 
 ||The complete German Wikipedia (2008/07/12)||http://dswiki.googlecode.com/files/DSwiki-dewiki-20080712.torrent||
 ||The complete English Wikipedia (2008/07/24)||http://dswiki.googlecode.com/files/DSwiki-enwiki-20080724.torrent||
+||Sample data (German Wikiquotes)||http://dswiki.googlecode.com/files/DSwiki-sample-data.zip||
