Edited wiki page through web user interface.

--- a/wiki/CreateDumps.wiki
+++ b/wiki/CreateDumps.wiki
@@ -1,4 +1,4 @@
-=How to create a custom dump file for the use in DSwiki=
+#summary How to create a custom dump file for the use in DSwiki
 
 ==Download==
 
