--- a/wiki/Dumps.wiki
+++ b/wiki/Dumps.wiki
@@ -7,6 +7,6 @@ On this page, pre-made and ready to use database dumps for DSwiki are available 
 
 ||The complete German Wikipedia (2008/07/12)|| http://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiki-20080712.tar.gz (1.1GB)||
 ||The complete English Wikipedia (2008/07/24)|| http://dswiki.googlecode.com/files/DSwiki-enwiki-20080724.torrent (3.5GB)||
-||German Wikiquotes|| http://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikiquote-20080613.tar.gz (5.3MB)||
+||German Wikiquotes (2008/06/13)|| http://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikiquote-20080613.tar.gz (5.3MB)||
 
-Just to test DSwiki, download one of the smaller dumps first.
+If you just want to test DSwiki, download one of the smaller dumps first.
