--- a/wiki/Dumps.wiki
+++ b/wiki/Dumps.wiki
@@ -5,8 +5,19 @@ On this page, pre-made and ready to use database dumps for DSwiki are available 
 
 = Dumps =
 
-||The complete German Wikipedia (2008/07/12)|| http://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiki-20080712.tar.gz (1.1GB)||
-||The complete English Wikipedia (2008/07/24)|| http://dswiki.googlecode.com/files/DSwiki-enwiki-20080724.torrent (3.5GB)||
-||German Wikiquotes (2008/06/13)|| http://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikiquote-20080613.tar.gz (5.3MB)||
+== Wikipedia ==
+
+||The complete English Wikipedia (2008/07/24)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiki-20080724.tar.gz (3.4 GB)||
+||The complete German Wikipedia (2008/07/12)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiki-20080712.tar.gz (1.1 GB)||
+||The complete French Wikipedia (2008/07/24)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/fr/frwiki-20080724.tar.gz (873 MB)||
+||The complete Polish Wikipedia (2008/06/12)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/pl/plwiki-20080612.tar.gz (411 MB)||
+||The complete Japanese Wikipedia (2008/07/24)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/ja/jawiki-20080724.tar.gz (780 MB)||
+
+== Other ==
+
+||Englisch Wikibooks (2008/08/01)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwikibooks-20080801.tar.gz (63 MB)||
+||Englisch Wikiquotes (2008/07/30)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwikiquote-20080730.tar.gz (40 MB)||
+||Englisch Wiktionary (2008/06/13)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiktionary-20080613.tar.gz (75 MB)||
+||German Wikiquotes (2008/06/13)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikiquote-20080613.tar.gz (5.3 MB)||
 
 If you just want to test DSwiki, download one of the smaller dumps first.
