--- a/wiki/CreateDumps.wiki
+++ b/wiki/CreateDumps.wiki
@@ -5,13 +5,13 @@
 
 Download a compressed XML dump from http://download.wikimedia.org/.
 
-E.g. for the german Wikipedia, download http://dumps.wikimedia.org/dewiki/latest/dewiki-latest-pages-articles.xml.bz2. You always need the ...-pages-articles.xml.bz2 version! The others files do not include the necessary data, or have too much data in them.
+E.g. for the german Wikipedia, download http://dumps.wikimedia.org/dewiki/latest/dewiki-latest-pages-articles.xml.bz2. In my experience, _latest_ does not necessarily mean latest. Better go up one directory and check each labeled folder separately. You always need the ...-pages-articles.xml.bz2 version! The others files do not include the necessary data, or have too much data in them.
 
 ==Reindexing the file==
 
 Download http://dswiki.googlecode.com/files/dswiki-indexer-1.0.zip and unpack it into the same directory that contains the article file.
 
-Under Windows, run {{{indexer.exe <filename>}}}, under Linux type {{{./indexer <filename>}}}. After the indexing process, you should have at least these five files (additional files will be created if the source files is too big):
+Under Windows, run {{{indexer.exe <filename>}}} from the command line, under Linux execute {{{./indexer <filename>}}}. After the indexing process, you should have at least these five files (additional files will be created if the source files is too big):
   * articles.ifo
   * articles.dba
   * articles.idx
