--- a/wiki/Dumps.wiki
+++ b/wiki/Dumps.wiki
@@ -9,27 +9,14 @@ If you just want to test DSwiki, download one of the smaller dumps first.
 
 == Wikipedia ==
 
-||The complete English Wikipedia (2008/10/08)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiki-20081008.tar.gz (3.6 GB)||
-||The complete German Wikipedia (2008/10/11)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiki-20081011.tar.gz (1.2 GB)||
+|| The complete English Wikipedia (2008/10/08)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiki-20081008.tar.gz (3,6G)||
+|| The complete German Wikipedia (2008/12/06)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiki-20081206.tar.gz (1,3G)||
 ||The complete French Wikipedia (2008/10/17)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/fr/frwiki-20081017.tar.gz (931 MB)||
 ||The complete Polish Wikipedia (2008/06/12)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/pl/plwiki-20080612.tar.gz (411 MB)||
 ||The complete Japanese Wikipedia (2008/10/19)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/ja/jawiki-20081019.tar.gz (832 MB)||
 
 == Other ==
 
-||Englisch Wikibooks (2008/08/01)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwikibooks-20080801.tar.gz (63 MB)||
-||Englisch Wikiquotes (2008/07/30)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwikiquote-20080730.tar.gz (40 MB)||
-||Englisch Wiktionary (2008/06/13)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiktionary-20080613.tar.gz (75 MB)||
-||German Wikiquotes (2008/06/13)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikiquote-20080613.tar.gz (5.3 MB)||
-
-<!--|| The complete English Wikipedia (2008/10/08)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiki-20081008.tar.gz (3,6G)||
-|| The complete German Wikipedia (2008/12/06)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiki-20081206.tar.gz (1,3G)||
-|| The complete French Wikipedia (2008/12/01)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/fr/frwiki-20081201.tar.gz (967M)||
-|| The complete Japanese Wikipedia (2008/11/27)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/ja/jawiki-20081127.tar.gz (857M)||
-|| The complete Italian Wikipedia (2008/12/06)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/it/itwiki-20081206.tar.gz (630M)||
-|| The complete Polish Wikipedia (2008/12/23)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/pl/plwiki-20081223.tar.gz (485M)||
-|| The complete Russian Wikipedia (2008/12/28)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/ru/ruwiki-20081228.tar.gz (469M)||
-|| The complete Greek Wikipedia (2008/12/05)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/el/elwiki-20081205.tar.gz (56M)||
 || Englisch Wikibooks (2008/12/22)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwikibooks-20081222.tar.gz (71M)||
 || Englisch Wikiquotes (2008/12/27)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwikiquote-20081227.tar.gz (41M)||
 || Englisch Wiktionary (2008/12/14)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/en/enwiktionary-20081214.tar.gz (89M)||
@@ -38,4 +25,13 @@ If you just want to test DSwiki, download one of the smaller dumps first.
 || German Wikibooks (2008/12/04)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikibooks-20081204.tar.gz (27M)||
 || German Wikiquotes (2008/12/29)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikiquote-20081229.tar.gz (5,4M)||
 || German Wikisource (2008/12/29)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewikisource-20081229.tar.gz (145M)||
-|| German Wiktionary (2008/12/12)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiktionary-20081212.tar.gz (25M)||-->
+|| German Wiktionary (2008/12/12)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/de/dewiktionary-20081212.tar.gz (25M)||
+
+== Not yet uploaded ==
+
+|| The complete French Wikipedia (2008/12/01)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/fr/frwiki-20081201.tar.gz (967M)||
+|| The complete Japanese Wikipedia (2008/11/27)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/ja/jawiki-20081127.tar.gz (857M)||
+|| The complete Italian Wikipedia (2008/12/06)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/it/itwiki-20081206.tar.gz (630M)||
+|| The complete Polish Wikipedia (2008/12/23)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/pl/plwiki-20081223.tar.gz (485M)||
+|| The complete Russian Wikipedia (2008/12/28)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/ru/ruwiki-20081228.tar.gz (469M)||
+|| The complete Greek Wikipedia (2008/12/05)|| ftp://ftp5.gwdg.de/pub/wikipedia/nintendo/el/elwiki-20081205.tar.gz (56M)||
