--- a/wiki/CreateDumps.wiki
+++ b/wiki/CreateDumps.wiki
@@ -9,7 +9,7 @@ See http://code.google.com/p/dswiki/wiki/Dumps for a list of pre-made dumps, if 
 
 Download the compressed XML dump from http://download.wikimedia.org/.
 
-E.g. for the Wikipedia on Esperanto, go to http://dumps.wikimedia.org/eowiki/ and change into the directory with the highest date string (in my experience, _latest_ does not necessarily mean latest). Download the ...-pages-articles.xml.bz2 version! The other files do not include the necessary data, or have too much data in them.
+E.g. for the Wikipedia on Esperanto, go to http://download.wikimedia.org/eowiki/ and change into the directory with the highest date string (in my experience, _latest_ does not necessarily mean latest). Download the ...-pages-articles.xml.bz2 version! The other files do not include the necessary data, or have too much data in them.
 
 ==Reindexing the file==
 
